# ServoMover

./: CMakeLists.txt  automatedSequence.cpp  main.cpp  pwmControl.cpp
